0.6.5/_sources/gallery/imshow.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/imshow.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_imshow.py>`
        to download the full example as a Python script or as a
        Jupyter notebook.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_imshow.py:


Launch napari and display an image
==================================

Launch an instance of napari and simultaneously display an image using the
:func:`imshow` API. This example can be run to recreate the README image.

.. tags:: visualization-basic

.. GENERATED FROM PYTHON SOURCE LINES 10-24



.. image-sg:: /gallery/images/sphx_glr_imshow_001.png
   :alt: imshow
   :srcset: /gallery/images/sphx_glr_imshow_001.png
   :class: sphx-glr-single-img





.. code-block:: Python


    from skimage import data

    import napari

    viewer, layers = napari.imshow(data.cells3d(), channel_axis=1, ndisplay=3)

    # To recreate the README image uncomment the following lines:
    # viewer.window._qt_window.resize(800, 600)
    # napari._qt.qt_event_loop.get_qapp().processEvents()  # Ensure the window is done rendering before taking a screenshot
    # viewer.screenshot('./src/napari/resources/multichannel_cells.png', canvas_only=False)

    if __name__ == '__main__':
        napari.run()


.. _sphx_glr_download_gallery_imshow.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: imshow.ipynb <imshow.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: imshow.py <imshow.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: imshow.zip <imshow.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
